# cryptopals

./: .gitignore  LICENSE  README.md  meson.build
docs/: challenges.md
src/: meson.build
src/cryptopals/: meson.build
src/cryptopals/analysis/: aes_block_analyzer.cpp  aes_block_analyzer.h  analyzer.cpp  analyzer.h  english_ascii_frequency_analyzer.cpp  english_ascii_frequency_analyzer.h  frequency_analyzer.h  hamming_distance_analyzer.cpp  hamming_distance_analyzer.h  hamming_distance_analyzer_test.cpp  meson.build
src/cryptopals/analysis/data/: english.h  oanc_english.h
src/cryptopals/challenges/: meson.build
src/cryptopals/challenges/01/: aes_ecb_tool.cpp  convert_tool.cpp  meson.build  repeating_key_xor_tool.cpp  single_byte_xor_tool.cpp  xor_tool.cpp
src/cryptopals/challenges/01/data/: 5.txt
src/cryptopals/challenges/02/: aes_cbc_tool.cpp  meson.build
src/cryptopals/cipher/: aes_cbc.cpp  aes_cbc.h  aes_ecb.cpp  aes_ecb.h  cipher.h  decryption_result.h  meson.build  repeating_key_xor.cpp  repeating_key_xor.h  repeating_key_xor_test.cpp  single_byte_xor.cpp  single_byte_xor.h  symmetric_cipher.h
src/cryptopals/encoding/: ascii.cpp  ascii.h  ascii_test.cpp  encoding.h  meson.build
src/cryptopals/frequency/: analyzer.h  english_ascii_analyzer.cpp  english_ascii_analyzer.h  meson.build
src/cryptopals/frequency/data/: english.h
src/cryptopals/lib/: bytes.cpp  bytes.h  bytes_test.cpp  meson.build
src/cryptopals/proto/: cryptopals_enums.proto  meson.build
src/cryptopals/tools/: frequency_modeler.cpp  meson.build
src/cryptopals/util/: aes.cpp  aes.h  aes_test.cpp  algorithm.h  bytes.cpp  bytes.h  bytes_test.cpp  bytes_util.cpp  bytes_util.h  init_cryptopals.cpp  init_cryptopals.h  logging.cpp  logging.h  meson.build  padding.cpp  padding.h  padding_test.cpp  status_adaptors.h  string_utils.cpp  string_utils.h  tool_helpers.cpp  tool_helpers.h
src/cryptopals/util/internal/: README.md  integral_types.h  meson.build  module_initializer.h  source_location.h  status_builder.cpp  status_builder.h  status_macros.h  status_matchers.h  statusor.cpp  statusor.h  strerror.cpp  strerror.h  symbolized_stacktrace.cpp  symbolized_stacktrace.h
src/cryptopals/util/internal/logging/: check_ops.h  condition.h  errno_saver.h  log_entry.cpp  log_entry.h  log_flags.cpp  log_flags.h  log_lines.cpp  log_lines.h  log_message.cpp  log_message.h  log_sink.h  logging.cpp  logging.h  logging_internal.h  meson.build  null_guard.h  null_stream.h  scoped_mock_log.h  vlog_is_on.cpp  vlog_is_on.h
src/cryptopals/util/internal/status/: error_code_to_status.cpp  error_code_to_status.h  matchers.cpp  matchers.h  meson.build  ret_check.cpp  ret_check.h  status_builder.cpp  status_builder.h  status_macros.h  statusor.cpp  statusor.h  statusor_internals.h
subprojects/: abseil-cpp-git.wrap  abseil-cpp.wrap  google-lacuna.wrap  gtest-git.wrap  protobuf-git.wrap
subprojects/packagefiles/abseil-cpp/: meson.build
subprojects/packagefiles/abseil-cpp/absl/flags/: commandlineflag.h
subprojects/packagefiles/protobuf/: meson.build
