executable(
    'frequency_modeler',
    files(
        'frequency_modeler.cpp',
    ),
    dependencies: [
        absl_container_dep,
        absl_flags_dep,
        absl_strings_dep,
        ascii_dep,
        bytes_dep,
        cryptopals_logging_dep,
        init_cryptopals_dep,
    ],
    include_directories: root_include,
)
