executable(
    'convert_tool',
    files(
        'convert_tool.cpp',
    ),
    include_directories: root_include,
    dependencies: [
        absl_flags_dep,
        bytes_dep,
        cryptopals_enums_dep,
        init_cryptopals_dep,
        cryptopals_logging_dep,
        status_builder_dep,
        status_macros_dep,
        tool_helpers_dep,
    ],
)

executable(
    'xor_tool',
    files(
        'xor_tool.cpp',
    ),
    include_directories: root_include,
    dependencies: [
        absl_flags_dep,
        bytes_dep,
        cryptopals_enums_dep,
        init_cryptopals_dep,
        cryptopals_logging_dep,
        status_macros_dep,
        tool_helpers_dep,
    ],
)

executable(
    'single_byte_xor_tool',
    files(
        'single_byte_xor_tool.cpp',
    ),
    include_directories: root_include,
    dependencies: [
        absl_flags_dep,
        absl_status_dep,
        bytes_dep,
        cryptopals_enums_dep,
        init_cryptopals_dep,
        cryptopals_logging_dep,
        single_byte_xor_dep,
        status_macros_dep,
        tool_helpers_dep,
    ],
)

executable(
    'repeating_key_xor_tool',
    files(
        'repeating_key_xor_tool.cpp',
    ),
    include_directories: root_include,
    dependencies: [
        absl_flags_dep,
        absl_status_dep,
        bytes_dep,
        cryptopals_enums_dep,
        init_cryptopals_dep,
        cryptopals_logging_dep,
        repeating_key_xor_dep,
        status_macros_dep,
        tool_helpers_dep,
    ],
)

executable(
    'aes_ecb_tool',
    files(
        'aes_ecb_tool.cpp',
    ),
    include_directories: root_include,
    dependencies: [
        absl_flags_dep,
        absl_status_dep,
        aes_ecb_dep,
        bytes_dep,
        cryptopals_enums_dep,
        init_cryptopals_dep,
        cryptopals_logging_dep,
        status_macros_dep,
        tool_helpers_dep,
    ],
)
