executable(
    'aes_cbc_tool',
    files(
        'aes_cbc_tool.cpp',
    ),
    include_directories: root_include,
    dependencies: [
        absl_flags_dep,
        gl_absl_status_dep,
        aes_cbc_dep,
        bytes_dep,
        cryptopals_enums_dep,
        init_cryptopals_dep,
        cryptopals_logging_dep,
        gl_absl_status_dep,
        tool_helpers_dep,
    ],
)
